# aoa

./: AoA.txt  README.rst  aoa.py  main.py  pyproject.toml
aoa/: activity.py  aoa.py  coloring_strategy.py  dot.py  network.py  node.py  node_dict.py  plantuml.py
resources/: README.md
tests/artefacts/: AoA.yaml  test_case_5.yaml  tricky.yaml
testsets/: more_tricky.yaml  test_case_3.yaml  test_case_4.yaml
