[tool.black]
line-length=120

[tool.poetry]
name = "aoa"
version = "0.1.0"
description = "Create activity on arrow diagrams from yaml input"
authors = ["David Stadelmann <david.stadelmann@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
flask = "^3.0.0"
more-itertools = "^10.1.0"
networkx = "^3.2.1"
pygraphviz = "^1.12"
matplotlib = "^3.8.3"
pyside2 = "^5.15.2.1"
rstcheck = "^6.2.0"
restview = "^3.0.1"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
debugpy = "^1.6.7.post1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
